WiP: Use infrautils caches in Genius
Reference: https://git.opendaylight.org/gerrit/#/c/48920/

Change-Id: I0a3c7b657f4db572bd3691a8143b12379521a5e6
Signed-off-by: Vishal Thapar <vishal.thapar@ericsson.com>

--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -98,6 +98,13 @@
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>odl-infrautils-caches</artifactId>
+      <version>${infrautils.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
 
     <!-- Libraries from other projects -->
     <dependency>
