WiP: Use infrautils caches in Genius
Reference: https://git.opendaylight.org/gerrit/#/c/48920/

Change-Id: I0a3c7b657f4db572bd3691a8143b12379521a5e6
Signed-off-by: Vishal Thapar <vishal.thapar@ericsson.com>

--- a/interfacemanager/interfacemanager-impl/pom.xml
+++ b/interfacemanager/interfacemanager-impl/pom.xml
@@ -81,6 +81,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.ovsdb.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>caches-api</artifactId>
+      <version>${genius.infrautils.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
@@ -118,6 +123,12 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>sal-common-testutil</artifactId>
       <version>${controller.mdsal.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>caches-test</artifactId>
+      <version>${genius.infrautils.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
