--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -100,6 +100,13 @@
       <classifier>features</classifier>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>odl-infrautils-caches</artifactId>
+      <version>${infrautils.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.daexim</groupId>
       <artifactId>odl-daexim-all</artifactId>
       <version>${daexim.version}</version>
