--- a/mdsalutil/mdsalutil-api/pom.xml
+++ b/mdsalutil/mdsalutil-api/pom.xml
@@ -6,7 +6,8 @@ This program and the accompanying materials are made available under the
 terms of the Eclipse Public License v1.0 which accompanies this distribution,
 and is available at http://www.eclipse.org/legal/epl-v10.html
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -24,102 +25,109 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
        build failure. Please do not modify this unless you have a good reason. -->
   <name>ODL :: genius :: ${project.artifactId}</name>
 
-<dependencies>
-  <dependency>
-    <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>util</artifactId>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.openflowplugin.model</groupId>
-    <artifactId>model-flow-base</artifactId>
-    <version>${openflowplugin.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.openflowplugin.model</groupId>
-    <artifactId>model-flow-service</artifactId>
-    <version>${openflowplugin.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.controller</groupId>
-    <artifactId>liblldp</artifactId>
-    <version>${liblldp.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.controller</groupId>
-    <artifactId>sal-binding-api</artifactId>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.openflowplugin</groupId>
-    <artifactId>openflowplugin-extension-nicira</artifactId>
-    <version>${openflowplugin.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.openflowplugin</groupId>
-    <artifactId>openflowjava-extension-nicira</artifactId>
-    <version>${openflowplugin.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.ovsdb</groupId>
-    <artifactId>hwvtepsouthbound-api</artifactId>
-    <version>${genius.ovsdb.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.ovsdb</groupId>
-    <artifactId>utils.config</artifactId>
-    <version>${genius.ovsdb.version}</version>
-  </dependency>
-  <dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.opendaylight.yangtools</groupId>
+      <artifactId>util</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-base</artifactId>
+      <version>${openflowplugin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-service</artifactId>
+      <version>${openflowplugin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>liblldp</artifactId>
+      <version>${liblldp.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>sal-binding-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin</groupId>
+      <artifactId>openflowplugin-extension-nicira</artifactId>
+      <version>${openflowplugin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin</groupId>
+      <artifactId>openflowjava-extension-nicira</artifactId>
+      <version>${openflowplugin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>hwvtepsouthbound-api</artifactId>
+      <version>${genius.ovsdb.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>utils.config</artifactId>
+      <version>${genius.ovsdb.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.infrautils</groupId>
       <artifactId>counters-api</artifactId>
       <version>${genius.infrautils.version}</version>
-  </dependency>
-  <dependency>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.infrautils</groupId>
       <artifactId>inject</artifactId>
       <version>${genius.infrautils.version}</version>
-  </dependency>
-  <dependency>
-    <groupId>org.immutables</groupId>
-    <artifactId>value</artifactId>
-  </dependency>
-  <dependency>
-    <groupId>org.osgi</groupId>
-    <artifactId>org.osgi.core</artifactId>
-  </dependency>
+    </dependency>
+    <dependency>
+      <groupId>org.immutables</groupId>
+      <artifactId>value</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.cdi</groupId>
+      <artifactId>pax-cdi-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+
 
   <!-- Dependencies with <scope>test -->
-  <dependency>
-    <groupId>org.opendaylight.yangtools</groupId>
-    <artifactId>testutils</artifactId>
-    <scope>test</scope>
-  </dependency>
-  <dependency>
-    <groupId>org.awaitility</groupId>
-    <artifactId>awaitility</artifactId>
-    <scope>test</scope>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.mdsal</groupId>
-    <artifactId>mdsal-binding-test-utils</artifactId>
-    <scope>test</scope>
-  </dependency>
-  <dependency>
-    <groupId>org.opendaylight.infrautils</groupId>
-    <artifactId>infrautils-testutils</artifactId>
-    <version>${genius.infrautils.version}</version>
-    <scope>test</scope>
-  </dependency>
-  <dependency>
-    <groupId>com.google.truth</groupId>
-    <artifactId>truth</artifactId>
-    <scope>test</scope>
-  </dependency>
-  <dependency>
-    <groupId>com.google.guava</groupId>
-    <artifactId>guava-testlib</artifactId>
-  </dependency>
-</dependencies>
- <build>
+    <dependency>
+      <groupId>org.opendaylight.yangtools</groupId>
+      <artifactId>testutils</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.mdsal</groupId>
+      <artifactId>mdsal-binding-test-utils</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>infrautils-testutils</artifactId>
+      <version>${genius.infrautils.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-testlib</artifactId>
+    </dependency>
+  </dependencies>
+
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
@@ -133,24 +141,24 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
           </instructions>
         </configuration>
       </plugin>
-     <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-jar-plugin</artifactId>
-       <executions>
-         <execution>
-           <goals>
-             <goal>test-jar</goal>
-           </goals>
-         </execution>
-       </executions>
-     </plugin>
-     <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-checkstyle-plugin</artifactId>
-      <configuration>
-        <propertyExpansion>checkstyle.violationSeverity=error</propertyExpansion>
-      </configuration>
-    </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <propertyExpansion>checkstyle.violationSeverity=error</propertyExpansion>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
