--- a/itm/itm-impl/pom.xml
+++ b/itm/itm-impl/pom.xml
@@ -134,6 +134,12 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.ovsdb.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>mdsalutil-testutils</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <!--Build Dependencies-->
   <build>
