--- a/mdsalutil/mdsalutil-api/pom.xml
+++ b/mdsalutil/mdsalutil-api/pom.xml
@@ -80,6 +80,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.infrautils.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>jobcoordinator-api</artifactId>
+      <version>${genius.infrautils.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.immutables</groupId>
       <artifactId>value</artifactId>
     </dependency>
@@ -93,8 +98,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <optional>true</optional>
     </dependency>
 
-
-  <!-- Dependencies with <scope>test -->
+    <!-- Dependencies with <scope>test -->
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>testutils</artifactId>
@@ -141,17 +145,6 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
           </instructions>
         </configuration>
       </plugin>
-     <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-jar-plugin</artifactId>
-       <executions>
-         <execution>
-           <goals>
-             <goal>test-jar</goal>
-           </goals>
-         </execution>
-       </executions>
-     </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
