Make @Deprecated DataStoreJobCoordinator delegate to infrautils'
In an ideal world, we would instead now switch all uses of the
@Deprecated DataStoreJobCoordinator everywhere in genius and netvirt to
the new infrautils' JobCoordinator @OsgiService instead of having to do
this, but I would propose to do it in 2 steps and get this in first
(now), and then starting migrating, and then once everyone is off
DataStoreJobCoordinator and there are no usages left, delete it.

At least like this we would have only one version of this code, instead
of maintaining 2 split incarnations in genius and infrautils.

Also, and importantly, this change includes new infrastructure making it
easy to use JobCoordinator in the netvirt aclservice and genius
interfacemanager component tests, see
TestableJobCoordinatorEventsWaiterTest.

Change-Id: I2043d32d612fb63990721908ccfff33a3ddf0689
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/mdsalutil/mdsalutil-api/pom.xml
+++ b/mdsalutil/mdsalutil-api/pom.xml
@@ -79,6 +79,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.infrautils.version}</version>
   </dependency>
   <dependency>
+    <groupId>org.opendaylight.infrautils</groupId>
+    <artifactId>jobcoordinator-api</artifactId>
+    <version>${genius.infrautils.version}</version>
+  </dependency>
+  <dependency>
     <groupId>org.immutables</groupId>
     <artifactId>value</artifactId>
   </dependency>
