--- a/features/odl-genius-api/pom.xml
+++ b/features/odl-genius-api/pom.xml
@@ -81,6 +81,13 @@
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>odl-infrautils-jobcoordinator</artifactId>
+      <version>1.2.0-SNAPSHOT</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
 
     <!-- Libraries from other projects -->
     <dependency>
