--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     <module>fcapsmanager</module>
     <module>fcapsapplication</module>
     <module>resourcemanager</module>
+    <module>srm</module>
     <module>it</module>
   </modules>
 
