--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -172,5 +172,15 @@
       <artifactId>resourcemanager-impl</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>srm-impl</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>srm-shell</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
