Initial bundle setup for SRM
This adds following:

1. Initial api, impl and shell bundles for ServiceRecoveryManager (SRM)
2. Adds them to genius features
3. Skeletal code for CLI and RPCs

Change-Id: Idcc7266ba0ba8680a23f50261ab4b9aae19f2ed7
Signed-off-by: Vishal Thapar <vishal.thapar@ericsson.com>

--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -188,5 +188,15 @@
       <type>xml</type>
       <classifier>config</classifier>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>srm-impl</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>srm-shell</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
