InterfaceManager Service Recovery
Adding recovery support for interface-manager.
Two types of recovery are supported:

1. Service Level Recovery - This triggers deregistration and
registration of all external facing listeners

2. Interface Instance Level Recovery - This triggeres a delete and
create of a particular interface configuration so that the state can
be fully reconstructed

Change-Id: I9b8ee67730d0ce7e07ef8f70e7d9e22b35b67c63
Signed-off-by: Faseela K <faseela.k@ericsson.com>

--- a/interfacemanager/interfacemanager-impl/pom.xml
+++ b/interfacemanager/interfacemanager-impl/pom.xml
@@ -71,6 +71,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.ovsdb.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>srm-api</artifactId>
+      <version>${genius.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>utils.southbound-utils</artifactId>
       <version>${genius.ovsdb.version}</version>
