--- a/idmanager/idmanager-impl/pom.xml
+++ b/idmanager/idmanager-impl/pom.xml
@@ -41,8 +41,19 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.daexim</groupId>
+      <artifactId>daexim-model</artifactId>
+      <version>1.2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.cdi</groupId>
+      <artifactId>pax-cdi-api</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <!-- Testing Dependencies -->
