--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -34,6 +34,7 @@
     <dluxapps.version>0.7.0-SNAPSHOT</dluxapps.version>
     <liblldp.version>0.14.0-SNAPSHOT</liblldp.version>
     <infrautils.version>1.3.0-SNAPSHOT</infrautils.version>
+    <daexim.version>1.3.0-SNAPSHOT</daexim.version>
   </properties>
 
   <dependencyManagement>
@@ -95,6 +96,13 @@
       <groupId>org.opendaylight.infrautils</groupId>
       <artifactId>odl-infrautils-inject</artifactId>
       <version>${infrautils.version}</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.daexim</groupId>
+      <artifactId>odl-daexim-all</artifactId>
+      <version>${daexim.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
