BUG 9000 - Fix ITM config file not installed
Change-Id: Id20ed77d3e7564eaef064a3bc9881e1f472560c0
Signed-off-by: Jaime Caamaño Ruiz <jaime.caamano.ruiz@ericsson.com>

--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -172,5 +172,13 @@
       <artifactId>resourcemanager-impl</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <!-- finalname="etc/opendaylight/datastore/initial/config/genius-itm-config.xml" -->
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>itm-impl</artifactId>
+      <version>${project.version}</version>
+      <type>xml</type>
+      <classifier>config</classifier>
+    </dependency>
   </dependencies>
 </project>
