--- a/project.config
+++ b/project.config
@@ -5,3 +5,5 @@
 [access "refs/*"]
 	owner = group ldap/gerrit-genius-committers
 	read = group GitHub Replication
+[submit]
+	action = rebase if necessary
