--- a/interfacemanager/interfacemanager-impl/pom.xml
+++ b/interfacemanager/interfacemanager-impl/pom.xml
@@ -81,6 +81,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.ovsdb.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>diagstatus-api</artifactId>
+      <version>${genius.infrautils.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
