--- a/features/odl-genius/pom.xml
+++ b/features/odl-genius/pom.xml
@@ -58,6 +58,13 @@
       <classifier>features</classifier>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>odl-infrautils-diagstatus</artifactId>
+      <version>1.3.0-SNAPSHOT</version>
+      <type>xml</type>
+      <classifier>features</classifier>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
       <artifactId>odl-ovsdb-southbound-impl</artifactId>
       <version>${ovsdb.version}</version>
