--- a/interfacemanager/interfacemanager-impl/pom.xml
+++ b/interfacemanager/interfacemanager-impl/pom.xml
@@ -81,12 +81,22 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${genius.ovsdb.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>diagstatus-api</artifactId>
+      <version>${genius.infrautils.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.ops4j.pax.cdi</groupId>
+      <artifactId>pax-cdi-api</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <!-- Testing Dependencies -->
