DataBrokerFailures with failSubmits(TransactionCommitFailedException e)
Change-Id: I8cfe7f0bca4d2c4c42e0e51b4b83c0e668f03fa0
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/mdsalutil/mdsalutil-testutils/pom.xml
+++ b/mdsalutil/mdsalutil-testutils/pom.xml
@@ -68,6 +68,17 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <artifactId>mycila-guice-jsr250</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>sal-binding-broker-impl</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>sal-binding-broker-impl</artifactId>
+      <type>test-jar</type>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.opendaylight.infrautils</groupId>
