--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -31,6 +31,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     <module>config-parent</module>
     <module>it-parent</module>
     <module>testutils</module>
+    <module>teststubs</module>
   </modules>
 
   <!-- DO NOT install or deploy the repo root pom as it's only needed to initiate a build -->
