--- a/commons/binding-parent/pom.xml
+++ b/commons/binding-parent/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Copyright (c) 2016 Ericsson India Global Services Pvt Ltd. and others.  All rights reserved.
+Copyright (c) 2016, 2017 Ericsson India Global Services Pvt Ltd. and others.  All rights reserved.
 
 This program and the accompanying materials are made available under the
 terms of the Eclipse Public License v1.0 which accompanies this distribution,
@@ -32,9 +32,68 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <yang.ext.version>2013.09.07.12.0-SNAPSHOT</yang.ext.version>
     <yangtools.version>2.0.0-SNAPSHOT</yangtools.version>
     <mdsal.version>2.4.0-SNAPSHOT</mdsal.version>
+    <mdsal.model.version>0.12.0-SNAPSHOT</mdsal.model.version>
     <controller.mdsal.version>1.7.0-SNAPSHOT</controller.mdsal.version>
     <genius.mdsalutil.version>0.4.0-SNAPSHOT</genius.mdsalutil.version>
+    <model.bgp.version>2013.07.15.12.0-SNAPSHOT</model.bgp.version>
+    <openflowplugin.version>0.6.0-SNAPSHOT</openflowplugin.version>
+    <genius.ovsdb.version>1.6.0-SNAPSHOT</genius.ovsdb.version>
+    <genius.infrautils.version>1.3.0-SNAPSHOT</genius.infrautils.version>
+    <liblldp.version>0.14.0-SNAPSHOT</liblldp.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.opendaylight.mdsal</groupId>
+        <artifactId>mdsal-artifacts</artifactId>
+        <version>${mdsal.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.opendaylight.mdsal.model</groupId>
+        <artifactId>mdsal-model-artifacts</artifactId>
+        <version>${mdsal.model.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.opendaylight.controller</groupId>
+        <artifactId>mdsal-artifacts</artifactId>
+        <version>${controller.mdsal.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.opendaylight.yangtools</groupId>
+        <artifactId>yangtools-artifacts</artifactId>
+        <version>${yangtools.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency>
+
+    <!-- Testing Dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
