--- a/commons/testutils/pom.xml
+++ b/commons/testutils/pom.xml
@@ -12,9 +12,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
 
   <parent>
     <groupId>org.opendaylight.genius</groupId>
-    <artifactId>config-parent</artifactId>
+    <artifactId>binding-parent</artifactId>
     <version>0.4.0-SNAPSHOT</version>
-    <relativePath>../config-parent</relativePath>
+    <relativePath>../binding-parent</relativePath>
   </parent>
 
   <groupId>org.opendaylight.genius</groupId>
