--- a/mdsalutil/mdsalutil-testutils/pom.xml
+++ b/mdsalutil/mdsalutil-testutils/pom.xml
@@ -68,6 +68,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <artifactId>mycila-guice-jsr250</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.opendaylight.infrautils</groupId>
@@ -79,11 +84,6 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <groupId>org.opendaylight.infrautils</groupId>
       <artifactId>inject.guice.testutils</artifactId>
       <version>${genius.infrautils.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.truth</groupId>
-      <artifactId>truth</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
