--- a/arputil/arputil-api/pom.xml
+++ b/arputil/arputil-api/pom.xml
@@ -65,4 +65,15 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <artifactId>iana-if-type-2014-05-08</artifactId>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <failOnError>true</failOnError>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
