--- a/commons/binding-parent/pom.xml
+++ b/commons/binding-parent/pom.xml
@@ -30,7 +30,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <ietf.interfaces.version>2014.05.08.12.0-SNAPSHOT</ietf.interfaces.version>
     <iana.if.type.version>2014.05.08.12.0-SNAPSHOT</iana.if.type.version>
     <yang.ext.version>2013.09.07.12.0-SNAPSHOT</yang.ext.version>
-    <yangtools.version>2.0.0-SNAPSHOT</yangtools.version>
+    <yangtools.version>1.2.0</yangtools.version>
     <mdsal.version>2.4.0-SNAPSHOT</mdsal.version>
     <mdsal.model.version>0.12.0-SNAPSHOT</mdsal.model.version>
     <controller.mdsal.version>1.7.0-SNAPSHOT</controller.mdsal.version>
